# LangStitch

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.desktop.config.ts  playwright.marketplace.config.ts  vite.config.ts  vite.desktop.config.ts  vite.webview.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
docs/: index.html  styles.css
e2e/: .gitignore  basic-agent.spec.ts  cycles-batch-01.spec.ts  cycles-batch-02.spec.ts  cycles-batch-03.spec.ts  cycles-batch-04.spec.ts  cycles-batch-05.spec.ts  cycles-batch-06.spec.ts  cycles-batch-07.spec.ts  cycles-batch-08.spec.ts  cycles-batch-09.spec.ts  cycles-batch-10.spec.ts  cycles-batch-11.spec.ts  cycles-batch-12.spec.ts  cycles-batch-13.spec.ts  cycles-batch-14.spec.ts  cycles-batch-15.spec.ts  cycles-batch-16.spec.ts  cycles-batch-17.spec.ts  cycles-batch-18.spec.ts  cycles-batch-19.spec.ts  cycles-batch-20.spec.ts  cycles-batch-21.spec.ts  cycles-batch-22.spec.ts  cycles-batch-23.spec.ts  cycles-batch-24.spec.ts  cycles-batch-25.spec.ts  cycles-batch-26.spec.ts  (+63 more)
sdk/: .gitignore  README.md  pyproject.toml
sdk/src/langstitch/: __init__.py  _decorators.py  _version.py  a2a.py  a2a_client.py  a2a_server.py  agents.py  app.py  cli.py  config.py  context.py  graph.py  guardrails.py  hitl.py  mcp.py  nodes.py  orchestration.py  persona.py  policy.py  providers.py  registries.py  registry.py  scaffold.py  server.py  services.py  skills.py  tools.py  tracing.py
sdk/tests/: conftest.py  test_a2a.py  test_config.py  test_config_json.py  test_context.py  test_decorators.py  test_http_client.py  test_mcp.py  test_multiagent.py  test_properties.py  test_providers.py  test_registries.py  test_scaffold_cli.py  test_services.py  test_tracing.py
(+1022 files in other folders)
